run unit tests in workflow
Signed-off-by: Lixia (Sylvia) Lei <lixia_lei@outlook.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,3 +32,11 @@ jobs:
         run: make download
       - name: Build
         run: make build
+      - name: Run unit tests
+        run: make test
+      - name: Upload coverage report
+        uses: actions/upload-artifact@master
+        with:
+          name: oras-coverage-report-${{ github.sha }}
+          path: .cover/
+        if: always()
