--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,3 +32,10 @@ jobs:
         run: make download
       - name: Build
         run: make build
+      - name: Run unit tests
+        run: make test
+      - name: Upload coverage report
+        uses: actions/upload-artifact@master
+        with:
+          name: notation-coverage-report-${{ github.sha }}
+          path: .cover/
