feat: add weekly release
Signed-off-by: Junjie Gao <junjiegao@microsoft.com>

--- a/.github/workflows/release-github.yml
+++ b/.github/workflows/release-github.yml
@@ -20,6 +20,12 @@ jobs:
           go-version: ${{ matrix.go-version }}
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Set GoReleaser Previous Tag To Be Last Non Weekly Release
+        run: |
+          pre_tag=`git tag --sort=-creatordate --list 'v*' | grep -v dev | head -2 | tail -1`
+          echo "GORELEASER_PREVIOUS_TAG=$pre_tag" >> $GITHUB_ENV
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v3
         with:
