feat:support new verification workflow
Signed-off-by: zaihaoyin <zaihaoyin@microsoft.com>

--- a/test/e2e/testdata/config/config-example-with-extensions.yml
+++ b/test/e2e/testdata/config/config-example-with-extensions.yml
@@ -22,7 +22,7 @@ health:
 auth:
   htpasswd:
     realm: test-basic
-    path: /etc/docker/registry/passwd # hello:oras-test
+    path: /etc/docker/registry/passwd # user:password
 # Configuration for extensions. It follows the below schema
 # extensions
 #   namespace:
