--- a/.github/ISSUE_TEMPLATE/feature-request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yaml
@@ -53,7 +53,7 @@ body:
   - type: textarea
     id: context
     validations:
-      required: true
+      required: false
     attributes:
       label: "Any additional context?"
       description: "Add any other context or screenshots about the feature request here."
