fix: resolve comment
Signed-off-by: Junjie Gao <junjiegao@microsoft.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,6 @@ jobs:
       - name: Run unit tests
         run: make test
       - name: Run e2e tests
-        run:  | 
-          make e2e
+        run:  make e2e
       - name: Upload coverage to codecov.io
         uses: codecov/codecov-action@v3
