--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: [1.19]
+        go-version: ['1.20']
       fail-fast: true
     steps:
       - name: Set up Go ${{ matrix.go-version }}
