--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -18,7 +18,7 @@ jobs:
       security-events: write
     strategy:
       matrix:
-        go-version: [1.19]
+        go-version: ['1.20']
       fail-fast: false
     steps:
       - name: Checkout repository
