Added CODEOWNERS and MAINTAINERS files
Signed-off-by: Toddy Mladenov <toddysm@gmail.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,13 @@
-* @notaryproject/notation-maintainers
+# Org-Level Owners (in alphabetical order)
+* @justincormack 
+* @niazfk
+* @stevelasker
+
+# Repo-Level Owners (in alphabetical order)
+# Note: This is only for the notaryproject/notation repo
+* @gokarnm
+* @JeyJeyGao
+* @patrickzheng200
+* @priteshbandi
+* @rgnote
+* @shizhMSFT
