fix: fix the CODEOWNERS format issue
Signed-off-by: Yi Zha <yizha1@microsoft.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,13 +1,3 @@
-# Org-Level Owners (in alphabetical order)
-* @justincormack 
-* @niazfk
-* @stevelasker
-
 # Repo-Level Owners (in alphabetical order)
 # Note: This is only for the notaryproject/notation repo
-* @gokarnm
-* @JeyJeyGao
-* @patrickzheng200
-* @priteshbandi
-* @rgnote
-* @shizhMSFT
+* @gokarnm @JeyJeyGao @justincormack @niazfk @patrickzheng200 @priteshbandi @rgnote @shizhMSFT @stevelasker
