--- a/.github/ISSUE_TEMPLATE/bug-or-issue.yaml
+++ b/.github/ISSUE_TEMPLATE/bug-or-issue.yaml
@@ -27,8 +27,6 @@ body:
       label: "What is the areas you experience the issue in?"
       options: 
         - Notation CLI
-        - Notation-Core-Go Library
-        - Notation-Go Library
   - type: textarea
     id: verbatim
     validations:
@@ -67,4 +65,4 @@ body:
   - type: markdown
     attributes:
       value: |
-        If you want to contribute to this project, we will be happy to guide you through out contribution process especially when you already have a good proposal or understanding of how to fix this issue. Join us at https://slack.cncf.io/ and choose #notary-v2 channel.
+        If you want to contribute to this project, we will be happy to guide you through out contribution process especially when you already have a good proposal or understanding of how to fix this issue. Join us at https://slack.cncf.io/ and choose #notary-project channel.
