--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,3 @@
 # Repo-Level Owners (in alphabetical order)
 # Note: This is only for the notaryproject/notation repo
-* @gokarnm @JeyJeyGao @justincormack @niazfk @patrickzheng200 @priteshbandi @rgnote @shizhMSFT @stevelasker
+* @gokarnm @JeyJeyGao @justincormack @niazfk @priteshbandi @rgnote @shizhMSFT @stevelasker @Two-Hearts
