refactor: e2e framework to support --tag-schema testing
Signed-off-by: Junjie Gao <junjiegao@microsoft.com>

--- a/test/e2e/testdata/nginx/nginx.conf
+++ b/test/e2e/testdata/nginx/nginx.conf
@@ -3,6 +3,7 @@ events {
 }
 
 http {
+    # for TLS testing
     server {
         listen 80;
         listen 443 ssl;
@@ -11,6 +12,19 @@ http {
 
         ssl_certificate /etc/nginx/notation-e2e.registry.io.crt;
         ssl_certificate_key /etc/nginx/notation-e2e.registry.io.key;
+
+        location / {
+            proxy_pass http://notation-e2e-registry:5000;
+        }
+    }
+
+    # for emulating a registry that doesn't support referrers api
+    server {
+        listen 5001;
+
+        location ~ ^/v2/.+/referrers {
+            return 404;
+        }
 
         location / {
             proxy_pass http://notation-e2e-registry:5000;
