--- a/.github/ISSUE_TEMPLATE/feature-request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yaml
@@ -19,16 +19,6 @@ body:
     attributes:
       value: |
         Thank you for taking the time to suggest a useful feature for the project!
-  - type: dropdown
-    id: area
-    validations:
-      required: true
-    attributes:
-      label: "What is the areas you would like to add the new feature to?"
-      options: 
-        - Notation CLI
-        - Notation-Core-Go Library
-        - Notation-Go Library
   - type: textarea
     id: problem
     validations:
@@ -60,4 +50,4 @@ body:
   - type: markdown
     attributes:
       value: |
-        If you want to contribute to this project, we will be happy to guide you through out contribution process especially when you already have a good proposal or understanding of how to imrpove the functionality. Join us at https://slack.cncf.io/ and choose #notary-project channel.
+        If you want to contribute to this project, we will be happy to guide you through out contribution process especially when you already have a good proposal or understanding of how to improve the functionality. Join us at https://slack.cncf.io/ and choose #notary-project channel.
