--- a/.github/workflows/go-lint.yml
+++ b/.github/workflows/go-lint.yml
@@ -17,9 +17,8 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version: '1.20'
-          cache: false
+          cache: true
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
           version: latest
-          only-new-issues: true
