--- a/.github/workflows/license-checker.yml
+++ b/.github/workflows/license-checker.yml
@@ -28,17 +28,5 @@ permissions:
   pull-requests: write
 
 jobs:
-  check-license:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Check license header
-        uses: apache/skywalking-eyes/header@v0.4.0
-        with:
-          mode: check
-          config: .github/licenserc.yml
-      - name: Check dependencies license
-        uses: apache/skywalking-eyes/dependency@v0.4.0
-        with:
-          config: .github/licenserc.yml
+  license-check:
+    uses: Two-Hearts/notation-core-go/.github/workflows/reusable-license-checker.yml@license
