added release-* to workflows trigger event
Signed-off-by: Patrick Zheng <patrickzheng@microsoft.com>

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -15,9 +15,13 @@ name: "CodeQL"
 
 on:
   push:
-    branches: main
+    branches: 
+      - main
+      - release-*
   pull_request:
-    branches: main
+    branches: 
+      - main
+      - release-*
   schedule:
     - cron: '38 21 * * 1'
 
