--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -18,7 +18,9 @@ on:
     # Weekly on Saturdays.
     - cron: '30 1 * * 6'
   push:
-    branches: [ main, release-* ]
+    branches: 
+      - main
+      - release-*
     paths:
     - '!docs/**'
     - '!specs/**'
