--- a/.github/licenserc.yml
+++ b/.github/licenserc.yml
@@ -27,6 +27,9 @@ header:
       WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
       See the License for the specific language governing permissions and
       limitations under the License.
+    
+    pattern: |
+      *Copyright The ORAS Authors.*
 
   paths-ignore:
     - '**/*.md'
