testing license check
Signed-off-by: Patrick Zheng <patrickzheng@microsoft.com>

--- a/.github/licenserc.yml
+++ b/.github/licenserc.yml
@@ -29,7 +29,7 @@ header:
       limitations under the License.
     
     pattern: |
-      *Copyright The ORAS Authors.*
+      Copyright The ORAS Authors.
 
   paths-ignore:
     - '**/*.md'
