--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,3 +60,5 @@ jobs:
           fi
       - name: Upload coverage to codecov.io
         uses: codecov/codecov-action@c16abc29c95fcf9174b58eb7e1abf4c866893bc8 # v4.1.1
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
