--- a/.dev.goreleaser.yml
+++ b/.dev.goreleaser.yml
@@ -24,9 +24,12 @@ builds:
     goarch:
       - amd64
       - arm64
+      - arm
     ignore:
       - goos: windows
         goarch: arm64
+      - goos: windows
+        goarch: arm
     ldflags:
       - -s -w -X {{.ModulePath}}/internal/version.Version={{.Version}} -X {{.ModulePath}}/internal/version.GitCommit={{.FullCommit}} -X {{.ModulePath}}/internal/version.BuildMetadata=
 archives:
