Precise the arm version like it is done for oras, and ignore arm for darwin
Signed-off-by: lmussier <ludovic.mussier@gmail.com>

--- a/.dev.goreleaser.yml
+++ b/.dev.goreleaser.yml
@@ -25,10 +25,14 @@ builds:
       - amd64
       - arm64
       - arm
+    goarm:
+     - '7'
     ignore:
       - goos: windows
         goarch: arm64
       - goos: windows
+        goarch: arm
+      - goos: darwin
         goarch: arm
     ldflags:
       - -s -w -X {{.ModulePath}}/internal/version.Version={{.Version}} -X {{.ModulePath}}/internal/version.GitCommit={{.FullCommit}} -X {{.ModulePath}}/internal/version.BuildMetadata=
