updated dependabot to cover test/e2e
Signed-off-by: Patrick Zheng <patrickzheng@microsoft.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -19,7 +19,10 @@
 version: 2
 updates:
   - package-ecosystem: "gomod" # See documentation for possible values
-    directory: "/" # Location of package manifests
+    directories: # Location of package manifests
+      - "/"
+      - "/test/e2e"
+      - "/test/e2e/plugin"
     schedule:
       interval: "weekly"
 
