--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -46,3 +46,13 @@ archives:
 release:
   draft: true
   prerelease: auto
+signs:
+  - cmd: cosign
+    stdin: "{{ .Env.COSIGN_PWD }}"
+    args:
+      - "sign-blob"
+      - "--key=cosign.key"
+      - "--output-signature=${signature}"
+      - "${artifact}"
+      - "--yes" # needed on cosign 2.0.0+
+    artifacts: all
