--- a/.github/workflows/release-github.yml
+++ b/.github/workflows/release-github.yml
@@ -58,3 +58,4 @@ jobs:
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          COSIGN_PWD: ${{ secrets.COSIGN_PWD }}
