--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -56,5 +56,6 @@ signs:
       - "--plugin=azure-kv"
       - "--id=https://notationakvtest.vault.azure.net/keys/releasesigning/4e303b0603b340189dd8ef4b3f37db69"
       - "--plugin-config=self_signed=true"
+      - "--signature-directory=./dist"
       - "${artifact}"
     artifacts: all
