--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,9 @@ jobs:
           check-latest: true
       - name: Check out code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - name: Check signed commits in PR
+        if: github.event_name == 'pull_request'
+        uses: 1Password/check-signed-commits-action@v1  #v1.2.0
       - name: Cache Go modules
         uses: actions/cache@d4323d4df104b026a6aa633fdb11d772146be0bf # v4.2.2
         id: go-mod-cache
