Add detailed commit instead of a tag
Signed-off-by: 7h3-3mp7y-m4n <emailtorash@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Check signed commits in PR
         if: github.event_name == 'pull_request'
-        uses: 1Password/check-signed-commits-action@v1  #v1.2.0
+        uses: 1Password/check-signed-commits-action@ed2885f3ed2577a4f5d3c3fe895432a557d23d52 # v1.2.0
       - name: Cache Go modules
         uses: actions/cache@d4323d4df104b026a6aa633fdb11d772146be0bf # v4.2.2
         id: go-mod-cache
